--- a/coderen/assets/css/style.css
+++ b/coderen/assets/css/style.css
@@ -2,13 +2,41 @@
 	margin: 0px;
 	padding: 0px;
 	border: 1px solid black;
+	text-align: center;
+}
+h1 {
+	border: none;
 }
 .header-top {
-
+	height: 40px;
+	width: 100%;
 }
 .header-calltoaction {
-
+	height: 200px;
+	width: 1100px;
+	margin: 0 auto;
 }
 .header-menu {
-	
+	height: 40px;
+	width: 100%;
+}
+.container {
+	height: 500px;
+ 	width: 1100px;
+ 	margin: 0 auto;
+}
+.slider {
+	margin-left: -15px;
+	width: 1100px;
+	height: 200px;
+}
+.info {
+	margin-left: -15px;
+	width: 1100px;
+	height: 200px;
+}
+.footer {
+	height: 50px;
+	width: 80%;
+	margin: 0 auto;
 }
