--- a/coderen/assets/css/css.css
+++ b/coderen/assets/css/css.css
@@ -29,7 +29,7 @@ margin-right: 20px;
 .foto-album div {
 	margin-top: 20px;
 	margin-right: 10px; 	
-	height: 100px;
+	margin-bottom: 10px;
 	width: 100px;
 }
 
@@ -40,4 +40,10 @@ margin-right: 20px;
 }
 .container {
 	height: 100%;
+}
+.omschrijving p {
+text-align: left;
+}
+.beschrijving p {
+	text-align: left;
 }
