--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -7,17 +7,18 @@ body {
 	background-color: #FAC846;
 }
 .profile-wrapper {
-	right: 0px;
-	width: 204px;
+	float: right;
+	width: 200px;
 }
 .header-top {
 	height: 40px;
 	width: 100%;
-	background-color: red;
+	background-color: black;
 }
 .header-profile-bar {
 	width: 900px;
 	height: 40px;
+	position: relative;
 	margin: 0 auto;
 	color: white;
 }
@@ -25,9 +26,40 @@ body {
 	float: right;
 	position: absolute;
 	width: 200px;
-	height: 200px;
 	background-color: white;
-	border: 1px solid black;
+}
+.header-profile-menu a {
+	text-decoration: none;
+}
+.header-profile-menu-top {
+	height: 12px;
+	width: 100%;
+}
+.header-profile-menu-content {
+	border: 1px solid #777777;
+	height: 100%;
+}
+.header-profile-menu-item {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 20px;
+	color: #777777;
+	background-color: white;
+	border-bottom: 1px solid #A4A5A6;
+}
+.header-profile-menu-item:hover {
+	background-color: #ededed;
+	border-bottom: 1px solid #777777;
+}
+.header-profile-menu-item img {
+	float: left;
+	height: 26px;
+	width: 26px;
+	padding-left: 4px;
+	padding-right: 10px;
+}
+.header-profile {
+	height: 40px;
 }
 .header-profile p {
 	margin-left: 5px;
@@ -115,7 +147,8 @@ body {
 	margin-top: 0px;
 }
 .login-error-msg {
-	margin-bottom: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	padding: 10px;
 	list-style: none;
 	background-color: #FF8D8D;
@@ -149,4 +182,44 @@ body {
 }
 .login-submit-button:hover {
 	background: #8fc800;
+}
+.arrow-up {
+	margin: 0 auto;
+	width: 0; 
+	height: 0; 
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-bottom: 12px solid #A6A7A8;
+}
+.login-index-button {
+	float: right;
+	width: 90px;
+	margin: 5px;
+	height: 30px;
+	border: none;
+	border-radius: 5px;
+	font-size: 25px;
+	background: #FAC846;
+}
+.profile-info {
+	width: 100%;
+	height: 500px;
+	background-color: white;
+}
+.profile-info-form {
+	padding-top: 20px;
+	width: 500px;
+	margin: 0 auto;
+}
+.profile-info-input {
+	margin-bottom: 10px !important;
+	margin: 0 auto;
+	width: 500px;
+	height: 30px;
+}
+.profile-info-form select {
+	margin-bottom: 10px !important;
+	margin: 0 auto;
+	width: 500px;
+	height: 30px;
 }
