--- a/App/assets/css/css.css
+++ b/App/assets/css/css.css
@@ -1,3 +1,8 @@
+
+.container {
+	width: 960px;
+}
+
 .game-slider img {
 	height: 150px;
 	width: 700px;
@@ -38,9 +43,7 @@ margin-right: 20px;
 	height: 100px;
 	width: 100px;
 }
-.container {
 
-}
 .omschrijving p {
 text-align: left;
 }
@@ -51,9 +54,54 @@ text-align: left;
 .index-header {
 	height: 180px;
 	width: 100%;
+	background-color: black;
 
+}
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+.col-md-3 {
+	width: 225px;
+}
+.product-img img { 
+height:175px; 
+width:100%;
+}
+.product-info {
+	height: 90;
+	background-color: #fac846;
 }
 
 .menu{
 	height: 60px;
 }
+.index-slider {
+	height: 400px;
+}
+.index-slider img{
+
+	width: 100%;
+
+}
+.index-slogan {
+	height: 60px;
+}
+
+.index-games {
+	height: 450px;
+}
+
+
+.arrow-down {
+	margin: 0 auto;
+	height: 0;
+	width:0;
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-top: 12px solid #fac846;
+
+
+}
+
