--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -3,9 +3,7 @@
 	padding: 0px;
 	font-family: 'Arimo', sans-serif;
 }
-body {
-	background-color: #FAC846;
-}
+
 .profile-wrapper {
 	float: right;
 	width: 200px;
@@ -96,9 +94,7 @@ body {
 	margin-top: 115px;
 	text-align: left;
 }
-.slogantext {
-	text-align: left;
-}
+
 .header-menu {
 	height: 40px;
 	width: 100%;
@@ -120,11 +116,7 @@ body {
 	list-style: none;
 	display: inline-block;
 }
-.container {
- 	width: 900px;
- 	margin: 0 auto;
- 	padding: 0px;
-}
+
 .slider {
 	background-color: #FFFFFF;
 	float: left;
@@ -230,4 +222,163 @@ body {
 	margin: 0 auto;
 	width: 500px;
 	height: 30px;
+}
+
+
+.container {
+	width: 960px;
+}
+
+.game-slider img {
+	height: 150px;
+	width: 700px;
+}
+
+.logo img{
+	height: 148px;
+}
+
+.nav {
+	padding: 20px;
+
+}
+.nav li {
+margin-right: 20px;
+
+}
+.navbar{
+	position: none;
+	float: left;
+} 
+
+.game-logo img{
+	height: 150px;
+	width: 300px;
+	margin-bottom: 20px;
+}
+
+.foto-album div {
+	margin-top: 20px;
+	margin-right: 10px; 	
+	margin-bottom: 10px;
+	width: 100px;
+}
+
+.foto-album img {
+	margin-top: 20px;
+	height: 100px;
+	width: 100px;
+}
+
+.omschrijving p {
+text-align: left;
+}
+.beschrijving p {
+	text-align: left;
+}
+
+.index-header {
+	height: 180px;
+	width: 100%;
+	background-color: black;
+
+}
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+.col-md-3 {
+	width: 225px;
+}
+.product-img img { 
+height:175px; 
+width:100%;
+}
+.product-info {
+	height: 90;
+	background-color: #fac846;
+}
+
+.menu{
+	height: 60px;
+}
+.index-slider {
+	height: 400px;
+}
+.index-slider img{
+
+	width: 100%;
+
+}
+.index-slogan {
+	height: 60px;
+}
+
+.index-games {
+	height: 450px;
+}
+
+.arrow-down {
+	margin: 0 auto;
+	height: 0;
+	width:0;
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-top: 12px solid #fac846;
+	margin-top: -10px;
+}
+
+.store-header-top{
+	min-height: 250px;
+	padding-bottom: 30px;
+	text-align: center;
+}
+.store-logo{
+	width: 250px;
+	height: 250px;
+	display: inline-block;
+	margin: 0;
+}
+.store-slider{
+	display: inline-block;
+	width: 800px;
+	height: 250px;
+}
+.store-header-menu{
+	height: 20px;
+}
+.store-header-menu ul{
+	text-align: center;
+	padding: 10px 0;
+}
+.store-header-menu ul li{
+	display: inline;
+	margin: 10px;
+	font-weight: bold;
+}
+.store-container{
+	padding-bottom: 30px;
+}
+.store-items-wrapper{
+	margin: 0 auto;
+	width: 730px;
+	height: 202px;
+}
+.store-about{
+	height: 250px;
+}
+.store-item{
+	width: 200px;
+	height: 200px;
+	margin: 0 20px;
+	display: inline-block;
+}
+
+p.sloganscript 
+{
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	margin: 15px 0px 0px 0;
 }
