--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -24,7 +24,7 @@
 	float: right;
 	position: absolute;
 	width: 200px;
-	background-color: white;
+	background-color: transparent;
 }
 .header-profile-menu a {
 	text-decoration: none;
@@ -184,7 +184,7 @@
 	background: #8fc800;
 }
 .arrow-up {
-	margin: 0 auto;
+	margin-left: 100px;
 	width: 0; 
 	height: 0; 
 	border-left: 12px solid transparent;
