--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -227,6 +227,9 @@
 
 .container {
 	width: 960px;
+	position: relative;
+	z-index: 1;
+	margin-top: 370px;
 }
 
 .game-slider img {
@@ -305,6 +308,8 @@ width:100%;
 }
 .index-slider {
 	height: 400px;
+	position: absolute;
+	z-index: 500;
 }
 .index-slider img{
 
@@ -312,7 +317,7 @@ width:100%;
 
 }
 .index-slogan {
-	height: 60px;
+	height: 20px;
 }
 
 .index-games {
@@ -326,7 +331,7 @@ width:100%;
 	border-left: 12px solid transparent;
 	border-right: 12px solid transparent;
 	border-top: 12px solid #fac846;
-	margin-top: -10px;
+
 }
 
 .store-header-top{
@@ -426,12 +431,13 @@ ul li a{
     padding: 20px 20px 19px 20px;
     font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	color: #191407;
-	z-index: 1;
+	z-index: 9999;
+	position: relative;
     }
 
 ul li a:hover{
     background: #fac846;
-    z-index: 9999;
+
 }
 
 li{
