--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -4,10 +4,15 @@
 	font-family: 'Arimo', sans-serif;
 }
 
-.profile-wrapper {
-	float: right;
-	width: 200px;
+.container {
+	width: 960px;
+	position: relative;
+	z-index: 1;
+	margin-top: 370px;
 }
+
+/* header */
+
 .header-top {
 	height: 40px;
 	width: 100%;
@@ -78,6 +83,24 @@
 	width: 900px;
 	margin: 0 auto;
 }
+
+.header-title {
+	margin-top: 115px;
+	text-align: left;
+}
+
+.header-menu {
+	height: 40px;
+	width: 100%;
+	background-color: black;
+}
+
+
+/*----------------------------------------------------------------------------------------------
+EINDE HEADERBAR CSS
+------------------------------------------------------------------------------------------------*/
+
+/*Logo CSS*/
 .logo-slogan {
 	text-align: left;
 	float: left;
@@ -90,32 +113,77 @@
 	height: 180px;
 	width: 180px;
 }
-.header-title {
-	margin-top: 115px;
-	text-align: left;
+
+/*----------------------------------------------------------------------------------------------
+EINDE LOGO CSS
+------------------------------------------------------------------------------------------------*/
+
+.profile-wrapper {
+	float: right;
+	width: 200px;
 }
 
-.header-menu {
-	height: 40px;
-	width: 100%;
-	background-color: black;
-}
-.navibar {
+/* MENU CSS */
+
+.navborder{
+	background: #dddddd;
+	height: 60px;
+	width: 960px;
 	margin: 0 auto;
-	width: 900px;
-	height: 40px;
+}
+
+.navcolour{
+	background: #dddddd;
 	margin-top: -10px;
-} 
-.navibar a {
-	color: white;
+}
+
+ul{
+	padding: 0;
+	list-style: none;
+
+}
+
+ul li{
+	display: inline-block;
+	float: left;
+	width: 145px;
+	text-align: center;
+	margin: 0 auto;
+
+}
+
+ul li a{
+    display: block;
+    background: #dddddd;
+    text-decoration: none;
+    padding: 20px 20px 19px 20px;
+    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+	color: #191407;
+	z-index: 9999;
+	position: relative;
+    }
+
+ul li a:hover{
+    background: #fac846;
+
+}
+
+li{
+	display: inline;
 	text-decoration: none;
 }
-.navi li {
-	float: left;
-	padding: 10px;
-	list-style: none;
-	display: inline-block;
+
+ul li ul{
+	display: none;
 }
+
+ ul li:hover ul{
+    display: block;
+}
+
+/*----------------------------------------------------------------------------------------------
+EINDE MENU CSS
+------------------------------------------------------------------------------------------------*/
 
 .slider {
 	background-color: #FFFFFF;
@@ -123,18 +191,9 @@
 	width: 100%;
 	height: 200px;
 }
-.info {
-	float: left;
-	width: 100%;
-	height: 200px;
-	background-color: #FFFFFF;
-}
-.footer {
-	height: 50px;
-	width: 100%;
-	background-color: black;
-	color: white;
-}
+
+/* LOGIN CSS SCRIPT */
+
 .login-title {
 	margin-top: 0px;
 }
@@ -180,17 +239,7 @@
 	font-size: 25px;
 	background: #FAC846;
 }
-.login-submit-button:hover {
-	background: #8fc800;
-}
-.arrow-up {
-	margin-left: 100px;
-	width: 0; 
-	height: 0; 
-	border-left: 12px solid transparent;
-	border-right: 12px solid transparent;
-	border-bottom: 12px solid #A6A7A8;
-}
+
 .login-index-button {
 	float: right;
 	width: 90px;
@@ -201,6 +250,25 @@
 	font-size: 25px;
 	background: #FAC846;
 }
+
+.login-submit-button:hover {
+	background: #8fc800;
+}
+
+
+/*----------------------------------------------------------------------------------------------
+EINDE LOGIN SCRIPT CSS
+------------------------------------------------------------------------------------------------*/
+
+/* .arrow-up {
+	margin-left: 100px;
+	width: 0; 
+	height: 0; 
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-bottom: 12px solid #A6A7A8;
+} */
+
 .profile-info {
 	width: 100%;
 	margin-bottom: 20px;
@@ -224,14 +292,6 @@
 	height: 30px;
 }
 
-
-.container {
-	width: 960px;
-	position: relative;
-	z-index: 1;
-	margin-top: 370px;
-}
-
 .game-slider img {
 	height: 150px;
 	width: 700px;
@@ -240,19 +300,6 @@
 .logo img{
 	height: 148px;
 }
-
-.nav {
-	padding: 20px;
-
-}
-.nav li {
-margin-right: 20px;
-
-}
-.navbar{
-	position: none;
-	float: left;
-} 
 
 .game-logo img{
 	height: 150px;
@@ -284,8 +331,8 @@ text-align: left;
 	height: 180px;
 	width: 100%;
 	background-color: black;
-
 }
+
 IMG.displayed {
     display: block;
     margin-left: auto;
@@ -294,10 +341,12 @@ IMG.displayed {
 .col-md-3 {
 	width: 225px;
 }
+
 .product-img img { 
 height:175px; 
 width:100%;
 }
+
 .product-info {
 	height: 90;
 	background-color: #fac846;
@@ -321,7 +370,7 @@ width:100%;
 	height: 20px;
 }
 
-.index-games {
+.index-items {
 	height: 450px;
 }
 
@@ -332,7 +381,6 @@ width:100%;
 	border-left: 12px solid transparent;
 	border-right: 12px solid transparent;
 	border-top: 12px solid #fac846;
-
 }
 
 .store-header-top{
@@ -389,70 +437,15 @@ p.sloganscript
 	margin: 15px 0px 0px 0;
 }
 
-.index-games h2{
+.index-items h2{
 	margin-bottom: 50px;
 }
 
-
-
-*{
-	margin: 0px;
-	padding: 0px;
-}
-.navborder{
-	background: #dddddd;
-	height: 60px;
-	width: 960px;
-	margin: 0 auto;
-}
-
-.navcolour{
-	background: #dddddd;
-	margin-top: -10px;
-}
-
-ul{
-	padding: 0;
-	list-style: none;
-
-}
-
-ul li{
-	display: inline-block;
-	float: left;
-	width: 145px;
-	text-align: center;
-	margin: 0 auto;
-
-}
-
-ul li a{
-    display: block;
-    background: #dddddd;
-    text-decoration: none;
-    padding: 20px 20px 19px 20px;
-    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	color: #191407;
-	z-index: 9999;
-	position: relative;
-    }
-
-ul li a:hover{
-    background: #fac846;
-
-}
-
-li{
-	display: inline;
-	text-decoration: none;
-}
-
-ul li ul{
-	display: none;
-}
-
- ul li:hover ul{
-    display: block;
+.footer {
+	height: 50px;
+	width: 100%;
+	background-color: black;
+	color: white;
 }
 
 
