--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -484,9 +484,9 @@ EINDE STORE CSS
 
 @media (max-width: 1680px) {
 
-	.sloganscript 
+	.container 
 	{
-		margin-top: 20px;
+		margin-top: 430px;
 	}
 }
 
