--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -106,20 +106,6 @@
 EINDE HEADERBAR CSS
 ------------------------------------------------------------------------------------------------*/
 
-/*Logo CSS*/
-.logo-slogan {
-	text-align: left;
-	float: left;
-	width: 500px;
-	height: 200px;
-}
-.logo-slogan img {
-	float: left;
-	margin-top: 10px;
-	height: 180px;
-	width: 180px;
-}
-
 /*----------------------------------------------------------------------------------------------
 EINDE LOGO CSS
 ------------------------------------------------------------------------------------------------*/
@@ -202,20 +188,6 @@ li img
 EINDE MENU CSS
 ------------------------------------------------------------------------------------------------*/
 
-.index-slider 
-{
-	width: 100%;
-	float: left;
-}
-
-.slider 
-{
-	background-color: #FFFFFF;
-	float: left;
-	width: 100%;
-	height: 200px;
-}
-
 .index-slider img
 {
 	width: 100%;
@@ -231,9 +203,18 @@ p.sloganscript
 
 .index-slogan 
 {
-	height: 20px;
+	height: 30px;
+	text-align: center;
+	margin-bottom: 30px;
+	background-color: gray;
+	width: 100%;
 }
 
+.index-slogan p
+{
+	font-size: 18px;
+	font-family: 'Century Gothic';
+}
 /*------------------------------------------------------------------------------------------
 LOGIN CSS SCRIPT */
 
