--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -4,6 +4,10 @@
 	font-family: 'Arimo', sans-serif;
 }
 
+.index-items h2{
+	text-align: center;
+}
+
 .container {
 	width: 960px;
 	position: relative;
@@ -367,8 +371,9 @@ EINDE LOGIN SCRIPT CSS
 }
 
 .product-info {
-	height: 90;
+	height: 70px;
 	background-color: #fac846;
+	text-align: center;
 }
 
 .index-items 
@@ -407,10 +412,7 @@ EINDE LOGIN SCRIPT CSS
 
 @media (max-width: 1366px) {
 
-	.arrow-down
-	{
-		margin-top: -10px;
-	}
+
 		
 }
 
