--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -25,12 +25,11 @@
 	width: 100%;
 	background-color: black;
 }
-
 .header-top {
 	position: absolute;
 	height: 40px;
 	width: 100px;
-	background-color: black;
+	background-color: transparent;
 	margin-left: 170px;
 }
 .header-profile-bar {
@@ -122,7 +121,6 @@ EINDE LOGO CSS
 .profile-wrapper {
 	z-index: 99;
 	float: right;
-	width: 200px;
 }
 
 /* MENU CSS */
@@ -248,6 +246,7 @@ LOGIN CSS SCRIPT */
 	background-color: #65ff00;
 	border: 1px solid #4cbf00;
 }
+
 .login-screen {
 	height: 300px;
 	width: 900px;
@@ -396,11 +395,11 @@ EINDE LOGIN SCRIPT CSS
 }
 
 .arrow-up {
-	margin: 0 auto;
+	margin-left: 6px;
 	width: 0;
 	border-left: 12px solid transparent;
 	border-right: 12px solid transparent;
-	border-bottom: 12px solid #fac846;
+	border-bottom: 12px solid #A4A5A6;
 }
 
 .footer 
