--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -128,11 +128,12 @@ EINDE LOGO CSS
 
 /* MENU CSS */
 
-.navborder{
+.navborder {
 	background: #dddddd;
 	height: 60px;
-	width: 1100px;
+	width: 100%;
 	margin: 0 auto;
+	margin-left: 310px;
 }
 
 .navcolour{
