--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -553,6 +553,7 @@ EINDE LOGIN SCRIPT CSS
 .merchandise{
 	margin-top: 40px;
 	margin-bottom: 40px;
+	color:white;
 }
 .merchandise h3 {
 	margin-top: -15px;
@@ -568,10 +569,35 @@ EINDE LOGIN SCRIPT CSS
 	height: 320px;
 }
 
+.select-size {
+	margin-top: 20px;
+	height: 50px;
+	width: 225px;
+	background-color: #d6cfbf;
+	color: #6d6a61;
+	margin-left: -15px;
+	font-size: 20px;
+}
+
+.select-size select {
+	float: right;
+	height: 50px;
+	width: 60px;
+	background-color: #fac846;
+}
 .shirt-maat{
 	margin-top: 30px;
 	height: 290px;
 	background-color: #63676a;
+}
+.insert-cart .btn {
+	color: white;
+	font-size: 22px;
+	margin-top: 160px;
+	height: 50px;
+	width: 225px;
+	margin-left: -15px;
+	background-color: #fac846;
 }
 
 /* serious sam game page */
@@ -639,7 +665,6 @@ EINDE LOGIN SCRIPT CSS
 }
 
 @media (max-width: 1366px) {
-
 
 		
 }
