--- a/App/assets/css/sortable.css
+++ b/App/assets/css/sortable.css
@@ -1,3 +1,14 @@
+th.header { 
+    text-indent: 10px;
+    background-image: url(../img/small.gif); 
+    cursor: pointer; 
+    font-weight: bold; 
+    background-repeat: no-repeat; 
+    background-position: center left; 
+    padding-left: 20px; 
+    margin-left: -1px; 
+} 
+
 th.headerSortDown { 
     background-image: url(../img/small_desc.gif); 
     background-color: #fac846; 
@@ -6,15 +17,8 @@ th.headerSortDown {
 th.headerSortUp { 
     background-image: url(../img/small_asc.gif); 
     background-color: #fac846; 
-} 
+}
 
-th.header { 
-    background-image: url(../img/small.gif); 
-    cursor: pointer; 
-    font-weight: bold; 
-    background-repeat: no-repeat; 
-    background-position: center right; 
-    padding-left: 20px; 
-    border-right: 2px solid #dad9c7; 
-    margin-left: -1px; 
-} 
+.search-order{
+    margin: 10px auto;
+}
