--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -594,6 +594,7 @@ EINDE LOGIN SCRIPT CSS
 	height: 50px;
 	width: 60px;
 	background-color: #fac846;
+	margin-top: -38px;
 }
 .shirt-maat{
 	margin-top: 30px;
