--- a/App/assets/css/style.css
+++ b/App/assets/css/style.css
@@ -520,11 +520,15 @@ EINDE LOGIN SCRIPT CSS
     height: 135px;
     background-color: #e1e1e1;
 }
-.submit-button.button{
-    background-color:#444;
-    margin-top: 10px;
+
+#contact-form input[type="submit"]{
+	   width: 150px;
+	   height: 50px;
+	   margin-top: 20px;
+	   padding: 10px 10px 10px 10px; 
+	   background-color: orange;
 }
-.submit-button.button:hover{
+#contact-form input[type="submit"]:hover{
     background-color:#ee1d25;
 }
 #contact-form p input.button {
@@ -532,8 +536,6 @@ EINDE LOGIN SCRIPT CSS
 	font-size: 18px;
     font-weight:bold;
     color: #FFF;
-    width: 420px;
-    cursor:pointer;
 }
 .contact-adress{
 	width: 465px;
